# gitsync

./: .gitignore  AGENTS.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  compile_commands  github_scanner  implementation_plan.md  implementation_summary.md  install.sh  task.md
.opencode/: config.json
.opencode/command/: clean-activity.md  smart-task-minimax.md  smart-task.md
.opencode/command/templates/: activity_log_template.md  config.schema.json  config_template.json
.opencode/memory/: activity_log.md  lessons_learned.md
.opencode/skill/big-pickle/: SKILL.md
.opencode/skill/github-lazysync-c-dev/: SKILL.md
.opencode/skill/github-lazysync-tui-dev/: SKILL.md
.opencode/skill/github-lazysync-usage/: SKILL.md
.opencode/skill/skill-writer/: SKILL.md
include/: duplicate_detector.h  file_info.h
src/: duplicate_detector.c  duplicate_detector_simple.c  file_info.c  github_scanner.c  main.c  main_simple.c
